fixed multiple small issues with all pages

--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -67,7 +67,7 @@
                 <p>
                   <strong>Step 3:</strong> The sample is viewed under a microscope. Brown color indicates a positive test. No brown color indicates a negative test.
                 </p>
-                  <a class="y-n continue next left-arrow" ><span type="button"  name="button" data-toggle="modal" data-target="#myModal" class="top-3">&#8594;</span></a>
+                  <a class="y-n continue next left-arrow" ><span type="button"  name="button" data-toggle="modal" data-backdrop="static" data-target="#myModal" class="top-3">&#8594;</span></a>
 
             </div>
         </div>
@@ -99,7 +99,7 @@ Be sure to record the results in your Lab Handbook.</p>
 
                       </div>
                       <div class="modal-footer background-nav-blue">
-                        <a  class="continue-2" href="/patient1view20" data-navigate="patient1view20"><button id="next-page" type="button" class="next-page" data-dismiss="modal" name="button">Continue</button></a>
+                        <a  class="continue-2" href="/patient1view20" data-navigate="patient1view20"><button id="next-page" type="button" class="next-page"  name="button">Continue</button></a>
 
                       </div>
                     </div>
