--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -65,7 +65,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">Amplified <span class="check-mark">&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified <span class="check-mark">&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -73,7 +73,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
         <h2>That is incorrect. The HER2 FISH ratio is 1.5, so HER2 is not amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
@@ -81,7 +81,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-5 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Not Amplified <span class="check-mark mark2">&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified <span class="check-mark mark2">&#x2713;</span></button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -90,7 +90,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
         <h2><span class="pink-hl">Correct</span>. The HER2 FISH ratio is 1.5, so HER2 is not amplified. This indicates that HER2-targeted therapy should not be recommended as part of Velma’s treatment.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
