--- a/src/javascript/templates/patient1/patient1View33.hbs
+++ b/src/javascript/templates/patient1/patient1View33.hbs
@@ -79,7 +79,7 @@
 
                   </div>
                   <div class="col-md-4">
-                    <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                    <a class="continue next"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                     <!-- Modal -->
 
