--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -106,7 +106,7 @@
       <div class="col-md-4 line-across"></div>
       <div class="col-md-4">
         <!-- Button trigger modal -->
-        <a class="gray"><button type="button muted"  data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
+        <a class="gray"><button type="button muted"  data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Submit &#8594;</button></a>
         <!-- Modal -->
         <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
@@ -115,7 +115,7 @@
                 <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
                 <h2>Incorrect! Please try again.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                <a class="continue close-modal"><button id="next-page" type="button"  name="button">Try Again &#8594;</button></a>
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
                 <h2>Incorrect! Please try again.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                <a class="continue close-modal"><button id="next-page" type="button"  name="button">Try Again &#8594;</button></a>
               </div>
             </div>
           </div>
@@ -151,7 +151,7 @@
                 <h2>Incorrect! Please try again.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a class="continue close-modal"><button class="" id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                <a class="continue close-modal"><button class="" id="next-page" type="button"  name="button">Try Again &#8594;</button></a>
               </div>
             </div>
           </div>
