--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -60,7 +60,7 @@
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">Amplified <span class="check-mark">&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified <span class="check-mark">&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -68,7 +68,7 @@
         <h2>Incorrect. The ratio of red dots to green dots is greater than 2, so Michele’s results are amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient2view11" data-navigate="patient2view11" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient2view11" data-navigate="patient2view11" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
@@ -76,7 +76,7 @@
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-5 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Not Amplified <span class="check-mark mark2">&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified <span class="check-mark mark2">&#x2713;</span></button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -85,7 +85,7 @@
         <h2><span class="pink-hl">Correct</span> The ratio of red dots to green dots is greater than 2, so Michele’s results are amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient2view11" data-navigate="patient2view11" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient2view11" data-navigate="patient2view11" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
