--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -59,7 +59,7 @@ Click below to make your selection for next steps. </p>
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -84,7 +84,7 @@ Click below to make your selection for next steps. </p>
 
                </div>
                <div class="col-md-4">
-                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
+                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
 
    <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
    <div class="modal-dialog" role="document">
