--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -59,7 +59,7 @@ Click below to make your selection for next steps. </p>
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select treatment" type="button" data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -94,7 +94,7 @@ Click below to make your selection for next steps. </p>
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient3view15" data-toggle="modal" data-target="#myModal2" class="continue next next-test"><button type="button" class="next-test" name="button">Next Test &#8594;</button></a>
+                 <a data-navigate="patient3view15" data-toggle="modal" data-backdrop="static" data-target="#myModal2" class="continue next next-test"><button type="button" class="next-test" name="button">Next Test &#8594;</button></a>
                </div>
              </div>
          </div>
