--- a/src/javascript/templates/patient3/patient3view11.hbs
+++ b/src/javascript/templates/patient3/patient3view11.hbs
@@ -60,7 +60,7 @@ Do you have enough information to make a recommendation for treatment or do you 
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -86,7 +86,7 @@ Do you have enough information to make a recommendation for treatment or do you 
 
                </div>
                <div class="col-md-4">
-                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
+                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
 
    <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
    <div class="modal-dialog" role="document">
