--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -105,7 +105,7 @@ Be sure to record the information in your Lab Handbook.
               <h2>Correct. The area you clicked on indicates abnormal breast tissue.</h2>
             </div>
             <div class="modal-footer background-nav-blue">
-              <a href="/patient3view3" data-navigate="patient3view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+              <a href="/patient3view3" data-navigate="patient3view3" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@ Be sure to record the information in your Lab Handbook.
               <h2>Incorrect. The area you clicked on indicates normal breast tissue. Please try again.</h2>
             </div>
             <div class="modal-footer background-nav-blue">
-              <a class="continue-2 close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again</button></a>
+              <a class="continue-2 close-modal"><button id="next-page" type="button"  name="button">Try Again</button></a>
             </div>
           </div>
         </div>
