--- a/src/javascript/templates/patient3/patient3view9.hbs
+++ b/src/javascript/templates/patient3/patient3view9.hbs
@@ -62,7 +62,7 @@ Do you have enough information to make a recommendation for treatment or do you 
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
 
 
 
