--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -63,7 +63,7 @@
 
                         </iframe>
                         <!-- <a class="previous" href="/patient1view13" data-navigate="patient1view13"><button class="" type="button" name="button">&#8592; Previous</button></a>
-                        <a href="/patient1view14" data-navigate="patient1view14" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a> -->
+                        <a href="/patient1view14" data-navigate="patient1view14" class="continue"><button id="next-page" type="button"  name="button">Next &#8594;</button></a> -->
 
 
                         <div class="row continue-container  ">
