--- a/src/javascript/templates/patient1/patient1View13.hbs
+++ b/src/javascript/templates/patient1/patient1View13.hbs
@@ -76,22 +76,10 @@ Generally, the smaller the tumor, the better the patient’s chances for positiv
 
 
                                 <!-- Button trigger modal -->
-                                <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                                <a data-navigate="patient1view13_5" class="continue next"><button type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                                 <!-- Modal -->
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                                  <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                      <div class="modal-body">
-                                      <h2><span class="pink-hl">Slide 1 </span>contains abnormal cells from your patient's biopsy. Slide 2 contains normal cells.</h2>
-                                      </div>
-                                      <div class="modal-footer background-nav-blue">
-                                        <a href="/patient1view13_5" data-navigate="patient1view13_5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
 
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
 
 
                               </div>
