--- a/src/javascript/templates/patient1/patient1View21.hbs
+++ b/src/javascript/templates/patient1/patient1View21.hbs
@@ -77,7 +77,7 @@
 
 
                     <!-- Button trigger modal -->
-                    <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                    <a class="continue next"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                     <!-- Modal -->
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -93,7 +93,7 @@ Be sure to record the results in your Lab Handbook.</p>
 
                           </div>
                           <div class="modal-footer background-nav-blue">
-                            <a data-navigate="patient1view22" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                            <a data-navigate="patient1view22" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
                           </div>
                         </div>
