--- a/src/javascript/templates/patient1/patient1View37-5.hbs
+++ b/src/javascript/templates/patient1/patient1View37-5.hbs
@@ -71,7 +71,7 @@ Check on Velma's progress.    </blockquote>
 
                   </div>
                   <div class="col-md-4">
-                    <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                    <a class="continue next"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                     <!-- Modal -->
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -84,7 +84,7 @@ Check on Velma's progress.    </blockquote>
                           </p>
                           </div>
                           <div class="modal-footer background-nav-blue">
-                            <a data-navigate="patient1view38" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                            <a data-navigate="patient1view38" class="continue"><button id="next-page" type="button"  name="button">Next &#8594;</button></a>
 
                           </div>
                         </div>
