--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -99,7 +99,7 @@
             <div class="row reg-pad">
                 <div class="col-md-12 no-pad text-center choice background-nav-blue">
                     <a class="continue answer-1">
-                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer1">Administer Treatment A</button>
+                        <button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer1">Administer Treatment A</button>
                     </a>
 
                 </div>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="modal-footer background-nav-blue">
                             <a data-navigate="patient1view37_5" class="continue-2">
-                                <button data-dismiss="modal" name="button">Continue</button>
+                                <button  name="button">Continue</button>
                             </a>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
             <div class="row reg-pad">
                 <div class="col-md-12 no-pad text-center choice background-nav-blue">
                     <a class="continue answer-2">
-                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer2">Administer Treatment B</button>
+                        <button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer2">Administer Treatment B</button>
                     </a>
 
                 </div>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="modal-footer background-nav-blue">
                             <a class="continue-2">
-                                <button data-dismiss="modal" name="button">Try Again</button>
+                                <button  name="button">Try Again</button>
                             </a>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
             <div class="row reg-pad">
                 <div class="col-md-12 no-pad text-center choice background-nav-blue">
                     <a class="continue answer-3">
-                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer3">Administer Treatment C</button>
+                        <button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer3">Administer Treatment C</button>
                     </a>
 
                 </div>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="modal-footer background-nav-blue">
                             <a  class="continue-2">
-                                <button data-dismiss="modal" name="button">Continue</button>
+                                <button  name="button">Continue</button>
                             </a>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
             <div class="row reg-pad m-bot">
                 <div class="col-md-12 no-pad text-center choice background-nav-blue">
                     <a class="continue answer-4">
-                        <button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer4">Administer Treatment D</button>
+                        <button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer4">Administer Treatment D</button>
                     </a>
 
                 </div>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="modal-footer background-nav-blue">
                             <a class="continue-2">
-                                <button data-dismiss="modal" name="button">Try Again</button>
+                                <button  name="button">Try Again</button>
                             </a>
                         </div>
                     </div>
