--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -73,7 +73,7 @@
         <h2><span class="pink-hl">Correct!</span> The area you clicked on indicates abnormal breast tissue.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-        <a href="/patient1view5" data-navigate="patient1view5" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+        <a href="/patient1view5" data-navigate="patient1view5" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
       </div>
     </div>
   </div>
@@ -85,7 +85,7 @@
         <h2>Incorrect. The area you clicked on indicates normal breast tissue. Please try again</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-        <a class="continue-2 close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again</button></a>
+        <a class="continue-2 close-modal"><button id="next-page" type="button"  name="button">Try Again</button></a>
       </div>
     </div>
   </div>
