--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -79,7 +79,7 @@
 
 
                      <div class="col-md-3 yes-no col-sm-offset-2-5">
-                       <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
+                       <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
                        <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
                            <div class="modal-content">
@@ -90,7 +90,7 @@
                                </p>
                              </div>
                              <div class="modal-footer background-nav-blue">
-                               <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                               <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
                              </div>
                            </div>
@@ -98,7 +98,7 @@
                        </div>
                      </div>
                      <div style="margin-left: 25px;" class="col-md-3 yes-no">
-                       <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
+                       <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
 
                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
@@ -108,7 +108,7 @@
                                <p>The cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei. They have no duct structures and stain more purple than pink.</p>
                              </div>
                              <div class="modal-footer background-nav-blue">
-                               <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                               <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
                              </div>
                            </div>
