--- a/src/javascript/templates/patient2/patient2view12.hbs
+++ b/src/javascript/templates/patient2/patient2view12.hbs
@@ -45,7 +45,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
     <h2>A: Hormone blocking therapy only</h2>
 <div class="row reg-pad">
     <div class="col-md-12 no-pad text-center choice background-nav-blue">
-        <a class="continue answer-1"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer1" >Administer Treatment A</button></a>
+        <a class="continue answer-1"><button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer1" >Administer Treatment A</button></a>
 
       </div>
 </div>
@@ -60,7 +60,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
 </h2>
       </div>
       <div class="modal-footer background-nav-blue">
-         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
+         <a class="continue-2"><button  name="button">Try Again</button></a>
       </div>
     </div>
   </div>
@@ -69,7 +69,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
   <h2>B: Chemotherapy followed by hormone blocking therapy</h2>
 <div class="row reg-pad">
     <div class="col-md-12 no-pad text-center choice background-nav-blue">
-        <a class="continue answer-2"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer2" >Administer Treatment B</button></a>
+        <a class="continue answer-2"><button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer2" >Administer Treatment B</button></a>
 
       </div>
   </div>
@@ -81,7 +81,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
       <h2>Incorrect. You did not select the most appropriate adjuvant treatment option based on Michele’s test results. Please review your Lab Handbook and select another treatment option.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
+         <a class="continue-2"><button  name="button">Try Again</button></a>
       </div>
     </div>
   </div>
@@ -89,7 +89,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
   <h2>C: HER2-targeted therapy and chemotherapy</h2>
 <div class="row reg-pad">
     <div class="col-md-12 no-pad text-center choice background-nav-blue">
-        <a class="continue answer-3"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer3" >Administer Treatment C</button></a>
+        <a class="continue answer-3"><button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer3" >Administer Treatment C</button></a>
 
       </div>
   </div>
@@ -101,7 +101,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
       <h2>Correct. Based on Michele’s test results, the recommended treatment is HER2-targeted therapy and chemotherapy. As a result of HER2-targeted therapy and chemotherapy, Michele has not had a recurrence of her breast cancer. Success!</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-         <a data-navigate="startview3" class="continue-2"><button data-dismiss="modal" name="button">Continue</button></a>
+         <a data-navigate="startview3" class="continue-2"><button  name="button">Continue</button></a>
       </div>
     </div>
   </div>
@@ -109,7 +109,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
   <h2>D: Hormone blocking therapy, HER2-targeted therapy, and chemotherapy</h2>
 <div class="row reg-pad m-bot">
     <div class="col-md-12 no-pad text-center choice background-nav-blue">
-        <a class="continue answer-4"><button type="button" class="" name="button" data-toggle="modal" data-target="#modalAnswer4" >Administer Treatment D</button></a>
+        <a class="continue answer-4"><button type="button" class="" name="button" data-toggle="modal" data-backdrop="static" data-target="#modalAnswer4" >Administer Treatment D</button></a>
 
       </div>
   </div>
@@ -120,7 +120,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
       <h2>Incorrect. You did not select the most appropriate adjuvant treatment option based on Michele’s test results. Please review your Lab Handbook and select another treatment option.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
+         <a class="continue-2"><button  name="button">Try Again</button></a>
       </div>
     </div>
   </div>
