--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -71,7 +71,7 @@
 
 
 <div class="col-md-3 yes-no col-sm-offset-2-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -79,7 +79,7 @@
         <h2>Incorrect. This tissue sample does contain cancer cells.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient2view6" data-navigate="patient2view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient2view6" data-navigate="patient2view6" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
@@ -87,7 +87,7 @@
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-3 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -96,7 +96,7 @@
         <h2><span class="pink-hl">Correct</span>.Yes, this tissue sample contains cancer cells. Based on the biopsy, Michele had a left breast lumpectomy and lymph node biopsy.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient2view6" data-navigate="patient2view6" class="continue"><button class="muted" id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient2view6" data-navigate="patient2view6" class="continue"><button class="muted" id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
