--- a/src/javascript/templates/patient2/patient2view7.hbs
+++ b/src/javascript/templates/patient2/patient2view7.hbs
@@ -57,7 +57,7 @@ Click below to make your selection for next steps.
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
 
 
 
