--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -69,7 +69,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">Positive <span class="check-mark">&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Positive <span class="check-mark">&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -77,7 +77,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
         <h2>Incorrect. Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
@@ -85,7 +85,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-5 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Negative <span class="check-mark mark2">&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Negative <span class="check-mark mark2">&#x2713;</span></button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -94,7 +94,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
         <h2><span class="pink-hl">Correct</span> Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
