--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -51,7 +51,7 @@
                 <p>
                   Click to send Brittany's tissue sample for OncoType DX® testing.
                 </p>
-                  <a class="y-n continue next left-arrow" ><span type="button"  name="button" data-toggle="modal" data-target="#myModal" class="top-4">&#8594;</span></a>
+                  <a class="y-n continue next left-arrow" ><span type="button"  name="button" data-toggle="modal" data-backdrop="static" data-target="#myModal" class="top-4">&#8594;</span></a>
 
             </div>
         </div>
@@ -81,7 +81,7 @@ Be sure to record the results in your Lab Handbook.
 
                       </div>
                       <div class="modal-footer background-nav-blue">
-                        <a  class="continue-2" href="/patient3view13" data-navigate="patient3view14"><button id="next-page" type="button" class="next-page" data-dismiss="modal" name="button">Continue</button></a>
+                        <a  class="continue-2" href="/patient3view13" data-navigate="patient3view14"><button id="next-page" type="button" class="next-page"  name="button">Continue</button></a>
 
                       </div>
                     </div>
