--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -103,7 +103,7 @@
                <div class="col-md-4 line-across"></div>
                <div class="col-md-4">
                  <!-- Button trigger modal -->
-                 <a class="continue next gray"><button type="button muted"  data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
+                 <a class="continue next gray"><button type="button muted"  data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Submit &#8594;</button></a>
                  <!-- Modal -->
                  <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
@@ -112,7 +112,7 @@
                          <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                         <a href="/patient3view4" data-navigate="patient3view4" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+                         <a href="/patient3view4" data-navigate="patient3view4" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
                        </div>
                      </div>
                    </div>
@@ -124,7 +124,7 @@
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                         <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                         <a class="continue close-modal"><button id="next-page" type="button"  name="button">Try Again &#8594;</button></a>
                        </div>
                      </div>
                    </div>
@@ -136,7 +136,7 @@
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                         <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                         <a class="continue close-modal"><button id="next-page" type="button"  name="button">Try Again &#8594;</button></a>
                        </div>
                      </div>
                    </div>
@@ -148,7 +148,7 @@
                          <h2>Incorrect! Please try again.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                         <a class="continue close-modal"><button class="" id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
+                         <a class="continue close-modal"><button class="" id="next-page" type="button"  name="button">Try Again &#8594;</button></a>
                        </div>
                      </div>
                    </div>
