--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -71,7 +71,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
 
 
 <div class="col-md-3 yes-no col-sm-offset-2-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -79,7 +79,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
         <h2>Incorrect. This tissue sample does contain cancer cells.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient3view6" data-navigate="patient3view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient3view6" data-navigate="patient3view6" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
@@ -87,7 +87,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-3 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -96,7 +96,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
         <h2><span class="pink-hl">Correct</span>.Yes, this tissue sample contains cancer cells. Based on the biopsy, Brittany had a left breast lumpectomy and lymph node biopsy.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient3view6" data-navigate="patient3view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient3view6" data-navigate="patient3view6" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
