--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -73,7 +73,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">Positive <span class="check-mark">&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Positive <span class="check-mark">&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -81,7 +81,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
         <h2>Incorrect. Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient3view11" data-navigate="patient3view9" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient3view11" data-navigate="patient3view9" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
@@ -89,7 +89,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-5 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Negative <span class="check-mark mark2">&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Negative <span class="check-mark mark2">&#x2713;</span></button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -98,7 +98,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
         <h2><span class="pink-hl">Correct</span> Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
-          <a href="/patient3view11" data-navigate="patient3view9" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
+          <a href="/patient3view11" data-navigate="patient3view9" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
         </div>
       </div>
