took out outer circle on side nav patient1

--- a/src/javascript/templates/patient1/patient1View11.hbs
+++ b/src/javascript/templates/patient1/patient1View11.hbs
@@ -24,7 +24,7 @@
                 <li class="third-step completed"><span class="dot completed"></span></li>
                 <li class="fourth-step completed"><span class="dot completed"></span></li>
                 <li class="fifth-step completed"><span class="dot completed"></span></li>
-                <li class="6th-step completed"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                <li class="6th-step completed"><span class="dot active"></span><span class="dot active pulse"></span></li>
                 <li class="7th-step "><span class="dot"></span></li>
 
                 <li class="8th-step "><span class="dot "></span></li>
