--- a/src/javascript/templates/patient1/patient1View15.hbs
+++ b/src/javascript/templates/patient1/patient1View15.hbs
@@ -28,7 +28,7 @@
                                       <div class="row breadcrumb steps-13">
                                         <ul class="ul-fix">
                                           <li class="1st-step completed"><span class="dot completed"></li>
-                                          <li class="2nd-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                                          <li class="2nd-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                                           <li class="3rd-step "><span class="dot "></span></li>
                                           <li class="4th-step "><span class="dot "></span></li>
                                           <li class="5th-step"><span class="dot"></span></li>
