--- a/src/javascript/templates/patient1/patient1View22.hbs
+++ b/src/javascript/templates/patient1/patient1View22.hbs
@@ -32,7 +32,7 @@
                 <li class="4th-step completed"><span class="dot completed"></span></li>
                 <li class="5th-step completed"><span class="dot completed"></span></li>
                 <li class="6th-step completed"><span class="dot completed"></span></li>
-                <li class="7th-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                <li class="7th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                 <li class="8th-step "><span class="dot "></span></li>
                 <li class="9th-step "><span class="dot "></span></li>
                 <li class="10th-step"><span class="dot"></span></li>
