--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -14,7 +14,7 @@
             <li class="second-step completed"><span class="dot completed"></span></li>
             <li class="third-step completed"><span class="dot completed"></span></li>
             <li class="fourth-step completed"><span class="dot completed"></span></li>
-            <li class="fifth-step active mammo"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+            <li class="fifth-step active mammo"><span class="dot active"></span><span class="dot active pulse"></span></li>
           </ul>
         </div>
         <div class="row next-steps">
