--- a/src/javascript/templates/patient1/patient1View1.hbs
+++ b/src/javascript/templates/patient1/patient1View1.hbs
@@ -10,7 +10,7 @@
         </ul>
         <div class="row breadcrumb">
           <ul class="ul-fix">
-            <li class="first-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+            <li class="first-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
             <li class="second-step"><span class="dot"></span></li>
             <li class="third-step"><span class="dot"></span></li>
             <li class="fourth-step"><span class="dot"></span></li>
