--- a/src/javascript/templates/patient1/patient1View10.hbs
+++ b/src/javascript/templates/patient1/patient1View10.hbs
@@ -23,7 +23,7 @@
                                   <li class="second-step completed"><span class="dot completed"></span></li>
                                   <li class="third-step completed"><span class="dot completed"></span></li>
                                   <li class="fourth-step completed"><span class="dot completed"></span></li>
-                                  <li class="fifth-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                                  <li class="fifth-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                                   <li class="6th-step "><span class="dot"></span></li>
                                   <li class="7th-step "><span class="dot "></span></li>
                                   <li class="8th-step "><span class="dot "></span></li>
