--- a/src/javascript/templates/patient1/patient1View13.hbs
+++ b/src/javascript/templates/patient1/patient1View13.hbs
@@ -26,7 +26,7 @@
                                 <li class="fifth-step completed"><span class="dot completed"></span></li>
                                 <li class="6th-step completed"><span class="dot completed"></span></li>
                                 <li class="7th-step completed"><span class="dot completed"></span></li>
-                                <li class="8th-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                                <li class="8th-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
 
                               </ul>
                             </div>
