--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -13,7 +13,7 @@
             <li class="first-step completed"><span class="dot completed"></span></li>
             <li class="second-step completed"><span class="dot completed"></span></li>
             <li class="third-step completed"><span class="dot completed"></span></li>
-            <li class="fourth-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+            <li class="fourth-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
             <li class="fifth-step mammo"><span class="dot"></span></li>
           </ul>
         </div>
