--- a/src/javascript/templates/patient1/patient1View6.hbs
+++ b/src/javascript/templates/patient1/patient1View6.hbs
@@ -22,7 +22,7 @@
 
                         <div class="row breadcrumb biopsy">
                         <ul class="ul-fix">
-                            <li class="first-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                            <li class="first-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                             <li class="second-step"><span class="dot"></span></li>
                             <li class="third-step"><span class="dot"></span></li>
                             <li class="fourth-step"><span class="dot"></span></li>
