--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -31,7 +31,7 @@
                                 <li class="first-step completed"><span class="dot completed"></span></li>
                                 <li class="second-step completed"><span class="dot completed"></span></li>
                                 <li class="third-step completed"><span class="dot completed"></span></li>
-                                <li class="fourth-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                                <li class="fourth-step active"><span class="dot active"></span><span class="dot active pulse"></span></li>
                                 <li class="fifth-step"><span class="dot"></span></li>
                                 <li class="6th-step "><span class="dot"></span></li>
                                 <li class="7th-step "><span class="dot "></span></li>
