--- a/src/javascript/templates/patient1/patient1View26.hbs
+++ b/src/javascript/templates/patient1/patient1View26.hbs
@@ -57,9 +57,7 @@
         <h2>Conducting the HER2 FISH Test:</h2>
             <div class="svg-container">
                 <img src="images/microscope6.jpg" alt="cell biopsy slide 3" />
-                <p>
-                  Now you’re ready to observe the fluorescence micrograph!
-                </p>
+
                 <div class="svg-text full">
                     <p>
                       <strong>Step 5:</strong>
@@ -69,8 +67,9 @@
                       <a class="y-n continue next left-arrow" data-navigate="patient1view27" ><span class="top-4">&#8594;</span></a>
 
                 </div>
-                <p>
+                <p style="color:#061922;" class="pad50">
                   Now you’re ready to observe the fluorescence micrograph!
+
                 </p>
             </div>
             <div class="row continue-container background-nav-blue">
