universal spacing update

--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -41,7 +41,7 @@
     </blockquote>
     <main id="content-main" class="row patient-1 svg-test">
 
-      <p>
+      <p class="pad50">
         Review Velma’s mammogram and click on the area that shows an abnormality. If necessary, click Previous to review the normal mammogram.
       </p>
       <div class="svg-container">
