--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -41,7 +41,7 @@
     </blockquote>
     <main id="content-main" class="row patient-1 svg-test">
 
-      <p>
+    <p class="pad50">
       Look at the abnormality in Velma’s mammogram.  Which of the objects is closest to the size of the  abnormality?
 
       </p>
