fixed all patients click for cancer interactive

--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -130,7 +130,7 @@
         <h2>Incorrect. The area you clicked on indicates normal breast tissue. Please try again.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-        <a class="continue-2 close-modal"><button id="next-page" type="button"  name="button">Try Again</button></a>
+        <a class="continue-2 close-modal"><button id="next-page" type="button" data-dismiss="modal"  name="button">Try Again</button></a>
       </div>
     </div>
   </div>
