--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -166,7 +166,7 @@ main {
       padding: 0em 0em 1em 0;
     }
     h2 {
-      padding: 25px 50px;
+          padding: 0;
     }
     figcaption {
       background-color: $purple;
@@ -255,7 +255,7 @@ height: 18px;
 }
 @media only screen and (min-width:1100px) and (max-width: 1199px) {
 .modal.in .modal-dialog {
-    transform: translate(9vw, 10em);
+    transform: translate(11vw, 10em);
   }
 }
 @media only screen and (min-width:1000px) and (max-width: 1099px) {
