fixed missing js files

--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -1,4 +1,4 @@
-<div class="spacer2"></div>
+<!-- <div class="spacer2"></div>
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
@@ -47,23 +47,23 @@
 Do you have enough information to make a recommendation for treatment or do you need additional information?  <br><br>
 
 Click below to make your selection for next steps. </p>
-         <!-- <figure class="m-bottom">
+         <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
 
 
 
-         </figure> -->
+         </figure>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-6">
 
 
-                 <!-- Button trigger modal -->
+
                  <a class="previous"><button class="select treatment" type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
 
 
 
-                 <!-- Modal -->
+
                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
@@ -94,10 +94,122 @@ Click below to make your selection for next steps. </p>
 
                </div>
                <div class="col-md-4">
-                 <a ddata-toggle="modal" data-backdrop="static" data-target="#myModal2" class="continue next next-test"><button type="button" class="next-test" name="button">Next Test &#8594;</button></a>
+                 <a class="continue next next-test"><buttontype="button"class="next-test"data-toggle="modal" data-backdrop="static" data-target="#myModal2" >Next Test &#8594;</button></a>
                </div>
              </div>
          </div>
+
+    </main>
+  </div>
+
+</div> -->
+
+
+<div class="spacer2"></div>
+<div class="row">
+  <div class="col-md-3 no-pad">
+    <div id="side-navs-fixed">
+      <nav class="side-nav background-green">
+        <img class="patient3" src="images/patient2-final.jpg">
+        <ul class="background-green margin-bottom-0">
+          <li><span class="white">Patient No.03</span></li>
+          <li>Brittany Featherston</li>
+        </ul>
+        <div class="row next-steps p-2-steps">
+        <ul class="background-green">
+            <li><span></span></li>
+            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
+          </ul>
+          <ul>
+            <li><span></span></li>
+            <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
+          </ul>
+
+          <ul>
+            <li><span></span></li>
+            <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
+          </ul>
+          <ul>
+            <li><span></span></li>
+            <li class="border-bottom"><img src="images/icon_biopsy_over.png" alt="" /></span> OncoType DX Test</li>
+          </ul>
+          <ul>
+            <li><span></span></li>
+            <li class=""><img src="images/icon_treatment_over.png" alt="" /></span> Treatment</li>
+          </ul>
+        </div>
+      </nav>
+
+    </div>
+  </div>
+  <div class="col-md-6 col-md-offset-1 top-quote">
+    <blockquote>
+    Dr. You: Make a Decision
+    </blockquote>
+    <main id="content-main" class="row patient-3">
+
+      <p>What are the implications of Brittany's test results on her treatment plan?  Record your thoughts in your Lab Handbook.
+
+<br><br>
+Do you have enough information to make a recommendation for treatment or do you need additional information?
+<br><br>
+  Click below to make your selection for next steps.
+</p>
+         <!-- <figure class="m-bottom">
+           <img src="images/patient2slide1.png" alt="" />
+
+
+
+         </figure> -->
+         <div class="row continue-container background-nav-blue">
+             <div class="col-md-12 no-pad text-center">
+               <div class="col-md-6">
+
+
+                 <!-- Button trigger modal -->
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
+
+
+
+                 <!-- Modal -->
+                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                   <div class="modal-dialog" role="document">
+                     <div class="modal-content">
+                       <div class="modal-body">
+
+                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
+
+                       </div>
+                       <div class="modal-footer background-nav-blue">
+                          <a class="continue-2" data-navigate="patient3view12" href="patient3view12"><button  name="button">Continue</button></a>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+
+
+               </div>
+               <div class="col-md-2 line-across">
+
+               </div>
+               <div class="col-md-4">
+                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
+
+   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+   <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+      <h2>Next Test: That is correct. Based on Brittany’s test results, you do not have enough information to make a treatment recommendation.</h2>
+      </div>
+      <div class="modal-footer background-nav-blue">
+         <a class="continue-2" data-navigate="patient3view12" href="patient3view12"><button  name="button">Continue</button></a>
+      </div>
+    </div>
+   </div>
+   </div>
+   </div>
+   </div>
+   </div>
 
     </main>
   </div>
